--- a/MeetU/MeetU/Content/utilities.less
+++ b/MeetU/MeetU/Content/utilities.less
@@ -12,9 +12,17 @@
     transform: translate3D(-50%,0,0);
 }
 
-.u-horizontal-alignment-center-relative{
+.u-horizontal-alignment-center-relative {
     margin-left:auto;
     margin-right:auto;
     left:0;
     right:0;
+}
+
+.u-ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 100%;
+    display: inline-block;
 }
